Opened 7 years ago

Closed 7 years ago

#7962 closed defect (fixed)

Building with --enable-hardcoded-tables broken

Reported by: j3pic Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
How to reproduce:

$ git clone git@github.com:FFmpeg/FFmpeg.git
$ cd FFmpeg

# At commit ebcf4d354f5cd1ade20ebfe186527488990b1d7b

$ ./configure --enable-rpath --enable-gpl --enable-version3 --enable-nonfree --enable-shared --enable-small --enable-gray --enable-encoder=name --enable-avisynth --enable-chromaprint --enable-frei0r --enable-gcrypt --enable-gmp --enable-ladspa --enable-libass --enable-libbs2b --enable-libcaca --enable-libcodec2 --enable-libdc1394 --enable-libfdk-aac --enable-libiec61883 --enable-liblensfun --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-libpulse --enable-librsvg --enable-librubberband --enable-librtmp --enable-libshine --enable-libsmbclient --enable-libsnappy --enable-libsoxr --enable-libspeex --enable-libssh --enable-libtheora --enable-libtwolame --enable-libvo-amrwbenc --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxvid --enable-libxml2 --enable-libzvbi --enable-lv2 --enable-openal --enable-openssl --enable-libdrm --enable-mmal --enable-omx --enable-omx-rpi --enable-rkmpp --enable-pic --enable-thumb --enable-lto --enable-hardcoded-tables

$ make

This fails with linker errors when trying to link "libavcodec/qdm2_tablegen". There are several undefined symbols.

To get past this error, I edited "build/common.mak" and added the following rule at line 155, just above the $(HOSTPROGS) rule:

libavcodec/qdm2_tablegen: %$(HOSTEXESUF): %.o libavutil/log.o libavutil/bprint.o libavutil/mem.o
	gcc $(HOSTLDFLAGS) $(HOSTLD_O) $^ $(HOSTEXTRALIBS)

Building again succeeds.

Change History (2)

comment:1 by Carl Eugen Hoyos, 7 years ago

Component: build systemavcodec
Keywords: regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Summary: Makefile edit required to build.Building with --enable-hardcoded-tables broken

Regression since e78b0f83, patch sent.

comment:2 by Carl Eugen Hoyos, 7 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.