lavc/tableprint_vlc: Remove avpriv_request_sample() from included files.

Fixes compilation with --enable-hardcoded-tables.
Fixes ticket #7962.