libavcodec/tableprint_vlc.h
@@ -36,6 +36,7 @@
 #define AVCODEC_AVCODEC_H
 #define AVCODEC_INTERNAL_H
 #define AV_INPUT_BUFFER_PADDING_SIZE 64 // the value does not matter for this
+#define avpriv_request_sample(...)
 #include "tableprint.h"
 #include "get_bits.h"
 #include "mathtables.c"
